--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^0.5.8
   liquid_swipe: ^1.4.3
   provider: ^4.0.1
+  country_code_picker: ^1.3.7
 
 dev_dependencies:
   flutter_test:
