--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,12 @@ dependencies:
   liquid_swipe: ^1.4.3
   provider: ^4.0.1
   country_code_picker: ^1.3.7
+  get_it:
+  http: any
+  intl: ^0.16.1
+  toast: ^0.1.5
+  flutter_svg: ^0.17.1
+  flutter_paystack: ^1.0.3+1
 
 dev_dependencies:
   flutter_test:
